--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,2 +1,5 @@
-host=192.168.0.103:8111
-superUserToken=6311341797512354329
+host=192.168.100.13:8111
+superUserToken=6116725261899632899
+browser=chrome
+remote=http://localhost:4444/wd/hub
+browserSize=1920x1080
