--- a/.github/workflows/automation.yml
+++ b/.github/workflows/automation.yml
@@ -38,7 +38,7 @@ jobs:
         run: ./mvnw test -Dtest='com.example.teamcity.${{ inputs.package }}.**' -Dgroups=Regression
 
       - name: Make mvnw and all scripts executable
-        run: --chmod=+x ./
+        run: chmod -R +x ./
         # Создаем репорт с покрытием API тестов, основанном на Swagger.
         # Документация: https://github.com/viclovsky/swagger-coverage
         # Обязательно добавить фильтр SwaggerCoverageRestAssured в RestAssured
